openshift/httpd.yaml
apiVersion: v1
kind: Pod
metadata:
  name: httpd
  namespace: ak-test
spec:
  securityContext:
    runAsNonRoot: true
    runAsUser: 1000  # non-root UID
    seccompProfile:
      type: RuntimeDefault
  containers:
  - name: httpd
    image: httpd
    securityContext:
      allowPrivilegeEscalation: false
      capabilities:
        drop: ["ALL"]
