openshift/nginx.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  namespace: ak-test
spec:
  securityContext:
    runAsNonRoot: true
    runAsUser: 1000  # non-root UID
    seccompProfile:
      type: RuntimeDefault
  containers:
  - name: nginx
    image: nginx
    securityContext:
      allowPrivilegeEscalation: false
      capabilities:
        drop: ["ALL"]
