openshift/argocd-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: argocd-server-route
  namespace: argocd
spec:
  to:
    kind: Service
    name: argocd-operator-server
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: None   # <-- changed from Redirect
  wildcardPolicy: None
